--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -43,14 +43,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "June 2021 Windows non-security preview \"C\" release is available for some versions for Windows 10"
+          url: https://support.microsoft.com/help/5003698
+          itemType: whats-new
         - text: "Learning Module: Manage Windows updates in the cloud"
           url: https://docs.microsoft.com/learn/modules/m365-windows-manage-cloud-device-updates/
           itemType: whats-new
         - text: "Out-of-band update to address an issue preventing installing or opening Xbox Game Pass games"
           url: https://support.microsoft.com/help/5004476
-          itemType: whats-new
-        - text: "Take action: June 2021 security update available for all supported versions of Windows"
-          url: https://support.microsoft.com/help/5003637
           itemType: whats-new
 
       footerLink:
