Added SMB over QUIC to storage, updated storage landing page and TOC, and added a AVMA activation page

--- a/WindowsServerDocs/storage/storage.yml
+++ b/WindowsServerDocs/storage/storage.yml
@@ -66,6 +66,8 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
+          - text: SMB over QUIC
+            url: file-server/smb-over-quic.md
           - text: ReFS
             url: refs/refs-overview.md
           - text: Server Message Block (SMB) protocol
