--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -43,14 +43,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "Out-of-band update to address an issue in which IE11 and apps using the WebBrowser control might fail to open PDFs"
+          url: https://support.microsoft.com/help/5004760
+          itemType: whats-new
         - text: "Introducing Windows 11"
           url: https://blogs.windows.com/windowsexperience/?p=175814
           itemType: whats-new
         - text: "June 2021 Windows non-security preview \"C\" release is available for all supported versions of Windows"
           url: https://support.microsoft.com/help/5003690
-          itemType: whats-new
-        - text: "PowerShell for the Windows Update for Business deployment service now available!"
-          url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/powershell-for-the-windows-update-for-business-deployment/ba-p/2437208
           itemType: whats-new
 
       footerLink:
