--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -43,14 +43,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "A framework for Windows endpoint management transformation"
+          url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/a-framework-for-windows-endpoint-management-transformation/ba-p/2460684
+          itemType: whats-new
         - text: "Out-of-band update to address an issue in which IE11 and apps using the WebBrowser control might fail to open PDFs"
           url: https://support.microsoft.com/help/5004760
           itemType: whats-new
         - text: "Introducing Windows 11"
           url: https://blogs.windows.com/windowsexperience/?p=175814
-          itemType: whats-new
-        - text: "June 2021 Windows non-security preview \"C\" release is available for all supported versions of Windows"
-          url: https://support.microsoft.com/help/5003690
           itemType: whats-new
 
       footerLink:
