--- a/WindowsServerDocs/windows-server-2022/toc.yml
+++ b/WindowsServerDocs/windows-server-2022/toc.yml
@@ -7,6 +7,8 @@ items:
     href: ./get-started/whats-new.md
   - name: System requirements
     href: get-started/system-requirements.md
+  - name: Install | Upgrade | Migrate
+    href: get-started/install-upgrade-migrate.md
   - name: Automatic Virtual Machine Activation
     href: get-started/vm-activation.md
   - name: Features removed or no longer developed
