Added editions comparison article and updated TOC

--- a/WindowsServerDocs/windows-server-2022/toc.yml
+++ b/WindowsServerDocs/windows-server-2022/toc.yml
@@ -11,5 +11,7 @@ items:
     href: get-started/install-upgrade-migrate.md
   - name: Automatic Virtual Machine Activation
     href: get-started/vm-activation.md
+  - name: Editions comparison
+    href: get-started/editions-comparison.md
   - name: Features removed or no longer developed
     href: get-started/removed-features.md
