--- a/WindowsServerDocs/networking/technologies/vrss/vrss-faq.yml
+++ b/WindowsServerDocs/networking/technologies/vrss/vrss-faq.yml
@@ -1,48 +1,71 @@
 ### YamlMime:FAQ
 metadata:
-  title: QoS Frequently Asked Questions
-  description: This topic provides answers to questions about Quality of Service (QoS) Policy in Windows Server 2016.
+  title: vRSS Frequently Asked Questions
+  description: In this topic, you find some commonly asked questions and answers about using vRSS.
   ms.topic: article
-  ms.assetid: 74c97a14-b957-4568-b48e-8963a674fdb3
-  manager: brianlic
+  ms.assetid: 61ae242e-82a8-430d-b07d-52b86c01e686
+  ms.localizationpriority: medium
+  manager: dougkim
+  ms.date: 09/05/2018
   ms.author: jgerend
   author: JasonGerend
-  ms.date: 08/07/2020
     
-title: QoS Policy Frequently Asked Questions
-summary: |
-  >Applies to: Windows Server (Semi-Annual Channel), Windows Server 2016
-  
-  Following are frequently asked questions – and answers to those questions – for QoS Policy.
-  
+title: vRSS Frequently Asked Questions
+summary: In this topic, you find some commonly asked questions and answers about using vRSS.
+
 
 sections:
   - name: Ignored
     questions:
       - question: |
-          What operating system does my domain controller need to be running to use QoS Policy?
+          What are the requirements for the physical network adapters that I use with vRSS?
         answer: |
-          Windows Server 2016, Windows Server 2012 R2, Windows Server 2012, Windows Server 2008 R2, or Windows Server 2008
-
-      - question: |
-          What operating systems support the application of QoS Policy to the user or computer?
-        answer: |
-          You can apply QoS policies to users or computers running Windows Server 2016, Windows 10, Windows Server 2012 R2, Windows 8.1, Windows Server 2012, Windows 8, Windows Server 2008 R2, Windows Server 2008, and Windows Vista.
-
-      - question: |
-          Do QoS policies apply to the sender or receiver of traffic?
-        answer: |
-          QoS policies must be applied on the sending computer to affect its outbound traffic. In order to affect the bidirectional traffic of two computers, QoS policies need to be applied to both computers.
-
-      - question: |
-          What happens if conflicting QoS policies are deployed to the same computer?
-        answer: |
-          If multiple policies apply, the more specific QoS policy takes precedence. For example, a policy that states a host address (192.168.4.12) gets applied instead of a less specific network address (192.168.0.0/16). If a computer-level and user-level policy have the same specificity, the user-level QoS policy is applied instead of the computer-level QoS policy.
-
-      - question: |
-          Is QoS Policy enabled by default?
-        answer: |
-          No, QoS Policy is not enabled by default. You must create QoS policies manually to enable QoS.  For more information, see [Manage QoS Policy](qos-policy-manage.md).
+          Network adapters must be compatible with Virtual Machine Queue \(VMQ\) and must have a link speed of 10 Gbps or more.
           
-          For the first topic in this guide, see [Quality of Service (QoS) Policy](qos-policy-top.md).
+          For more information, see [Plan the Use of vRSS](vrss-plan.md).
+          
+      - question: |
+          Does vRSS work with hyper\-threaded processor cores?
+        answer: |
+          No. Both vRSS and VMQ ignore hyper\-threaded processor cores.
+
+      - question: |
+          Does vRSS work for host virtual NICs \(vNICs\)?
+        answer: |
+          Yes. Use the **-ManagementOS** parameter instead of the virtual machine \(VM\) name on the **Set-VMNetworkAdapter** Windows PowerShell command, and **Enable-NetAdapterRss** on the host vNIC.
+          
+          For more information, see [Windows PowerShell Commands for RSS and vRSS](vrss-wps.md).
+          
+      - question: |
+          How many logical processors does a VM need to use vRSS?
+        answer: |
+          VMs need two or more logical processors \(LPs\) to be able to use vRSS.
+          
+          For more information, see [Plan the Use of vRSS](vrss-plan.md).
+          
+      - question: |
+          Is vRSS compatible with NIC Teaming?
+        answer: |
+          Yes. If you are using NIC Teaming, it is important that you properly configure VMQ to work with the NIC Teaming settings. For detailed information about NIC Teaming deployment and management, see [NIC Teaming](../nic-teaming/nic-teaming.md).
+          
+      - question: |
+          vRSS is enabled, but how do I know if it is working?
+        answer: |
+          You'll be able to tell vRSS is working by opening the task manager in your VM and viewing the virtual processor utilization. If there are multiple connections established to the VM, you can see more than one core above 0% utilization.
+          
+          Because a single TCP session cannot be load balanced across multiple logical processor cores, your VM must be receiving multiple TCP sessions before you can observe whether or not vRSS is working.
+          
+          If the VM is receiving multiple TCP sessions, but you do not see more than one LP core above 0% utilization, ensure that you have completed all of the preparation steps in the topic [Plan the Use of vRSS](vrss-plan.md).
+          
+      - question: |
+          I'm looking at the host and not all of the processors are being used. It looks like every other one is being skipped.
+        answer: |
+          Check to see if hyper threading is enabled. Both VMQ and vRSS are designed to skip hyper\-threaded cores.
+
+      - question: |
+          Are there different Windows PowerShell commands for RSS and vRSS?
+        answer: |
+          Yes and no. While you use the same commands for both RSS in native hosts and RSS in VMs, vRSS also requires VMQ to be enabled on the physical NIC - and for the VM and vRSS to be enabled on the switch port.
+          
+          For more information, see [Windows PowerShell Commands for RSS and vRSS](vrss-wps.md).
           
