Apply suggestions from PR review
sentence-capping titles

--- a/WindowsServerDocs/networking/technologies/qos/qos-policy-faq.yml
+++ b/WindowsServerDocs/networking/technologies/qos/qos-policy-faq.yml
@@ -1,6 +1,6 @@
 ### YamlMime:FAQ
 metadata:
-  title: QoS Frequently Asked Questions
+  title: QoS frequently asked questions
   description: This topic provides answers to questions about Quality of Service (QoS) Policy in Windows Server 2016.
   ms.topic: article
   ms.assetid: 74c97a14-b957-4568-b48e-8963a674fdb3
