--- a/WindowsServerDocs/networking/technologies/vrss/vrss-faq.yml
+++ b/WindowsServerDocs/networking/technologies/vrss/vrss-faq.yml
@@ -1,6 +1,6 @@
 ### YamlMime:FAQ
 metadata:
-  title: vRSS Frequently Asked Questions
+  title: vRSS frequently asked questions
   description: In this topic, you find some commonly asked questions and answers about using vRSS.
   ms.topic: article
   ms.assetid: 61ae242e-82a8-430d-b07d-52b86c01e686
