--- a/windows/release-information/index.yml
+++ b/windows/release-information/index.yml
@@ -43,14 +43,14 @@ conceptualContent:
   items:
     - title: Message center
       links:
+        - text: "July 2021 Windows non-security preview \"C\" release is available for Windows 10, version 1809"
+          url: https://support.microsoft.com/help/5004293
+          itemType: whats-new
         - text: "Introducing Windows 10, version 21H2"
           url: https://blogs.windows.com/windowsexperience/?p=176019
           itemType: whats-new
         - text: "The Windows release health site is now available in 10 languages"
           url: https://techcommunity.microsoft.com/t5/windows-it-pro-blog/windows-release-health-now-localized-in-10-languages/ba-p/2530167
-          itemType: whats-new
-        - text: "Take action: July 2021 security update available for all supported versions of Windows"
-          url: https://support.microsoft.com/help/5004237
           itemType: whats-new
 
       footerLink:
