Removing the rest of Semi-Annual Channel from Applies to lines

--- a/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
+++ b/WindowsServerDocs/storage/storage-replica/storage-replica-frequently-asked-questions.yml
@@ -11,7 +11,7 @@ metadata:
     
 title: Frequently asked questions about Storage Replica
 summary: |
-  >Applies to: Windows Server 2019, Windows Server 2016, Windows Server (Semi-Annual Channel)
+  >Applies to: Windows Server 2019, Windows Server 2016
   
   This topic contains answers to frequently asked questions (FAQs) about Storage Replica.
   
