--- a/WindowsServerDocs/storage/storage.yml
+++ b/WindowsServerDocs/storage/storage.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Landing
 
 title: Windows Server Storage documentation
-summary: 'Storage in Windows Server provides new and improved features for software-defined datacenter (SDDC) customers focusing on virtualized workloads. Windows Server also provides extensive support for enterprise customers using file servers with existing workloads. Applies to: Windows Server 2019, Windows Server 2016, Windows Server (Semi-Annual Channel).'
+summary: 'Storage in Windows Server provides new and improved features for software-defined datacenter (SDDC) customers focusing on virtualized workloads. Windows Server also provides extensive support for enterprise customers using file servers with existing workloads. Applies to: Windows Server 2019, Windows Server 2016.'
 
 metadata:
   title: Windows Server Storage documentation
