--- a/WindowsServerDocs/identity/ad-ds/manage/AD-Forest-Recovery-FAQ.yml
+++ b/WindowsServerDocs/identity/ad-ds/manage/AD-Forest-Recovery-FAQ.yml
@@ -11,8 +11,7 @@ metadata:
     
 title: AD Forest Recovery - FAQ
 summary: |
-  >Applies To: Windows Server 2016, Windows Server 2012 and 2012 R2, Windows Server 2008 and 2008 R2, Windows Server 2003
-  
+  >Applies to: Windows Server 2022, Windows Server 2019, Windows Server 2016, Windows Server 2012 and 2012 R2, Windows Server 2008 and 2008 R2, Windows Server 2003 
   This document contains frequently asked questions (FAQs) regarding forest recovery:
   
 
