--- a/WindowsServerDocs/windows-server-2022/toc.yml
+++ b/WindowsServerDocs/windows-server-2022/toc.yml
@@ -17,3 +17,5 @@ items:
     href: get-started/server-core-app-compatibility.md
   - name: Features removed or no longer developed
     href: get-started/removed-features.md
+  - name: Test Link
+    href: ../../windows-server-pr/windows/release-information/release-information.md
