Moved article including TOC and updated for freshness

--- a/WindowsServerDocs/get-started/toc.yml
+++ b/WindowsServerDocs/get-started/toc.yml
@@ -14,7 +14,7 @@ items:
           - name: Windows Server, version 2004 and 20H2
             href: whats-new-in-windows-server-2004.md
           - name: Windows Server, version 1903 and 1909
-            href: ..\get-started-19\whats-new-in-windows-server-1903-1909.md
+            href: whats-new-in-windows-server-1903-1909.md
           - name: Windows Server 2019
             href: ../get-started-19/whats-new-19.md
           - name: Windows Server 2016
