--- a/WindowsServerDocs/windows-server-2022/toc.yml
+++ b/WindowsServerDocs/windows-server-2022/toc.yml
@@ -17,6 +17,6 @@ items:
     href: get-started/server-core-app-compatibility.md
   - name: Features removed or no longer developed
     href: get-started/removed-features.md
-  - name: Configure Server Core with Sconfig.cmd
+  - name: Configure Server Core with SConfig
     href: get-started/sconfig-on-ws2022.md
     
